--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 config.py
 
 # Adding additional files
-API_practice.ipynb
-random_numbers.ipynb
+API_practice
+random_numbers
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
