--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 # Adding config.py file.
 config.py
 
-# Adding additional files
-API_practice
-random_numbers
+API_practice.ipynb
+random_numbers.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
